--- a/AttemptRepeatLiterature.ipynb
+++ b/AttemptRepeatLiterature.ipynb
@@ -837,12 +837,12 @@
    "id": "controlled-boston",
    "metadata": {},
    "source": [
-    "Forward Mode"
+    "# Forward Mode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "steady-generator",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "organized-bunny",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
        "y7 = 5 * y6\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,11 +880,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "positive-algorithm",
+   "cell_type": "markdown",
+   "id": "armed-humanity",
    "metadata": {},
-   "outputs": [],
    "source": [
     "struct Dual{T<:Real} <: Real\n",
     "  x::T\n",
@@ -894,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "greatest-stress",
    "metadata": {},
    "outputs": [
@@ -904,7 +902,7 @@
        "1 + 2ϵ"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,16 +914,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "provincial-irish",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Base: +, -, *, /\n",
+    "import Base: +, -, *, / , ^\n",
     "a::Dual + b::Dual = Dual(a.x + b.x, a.ϵ + b.ϵ)\n",
     "a::Dual - b::Dual = Dual(a.x - b.x, a.ϵ - b.ϵ)\n",
     "a::Dual * b::Dual = Dual(a.x * b.x, b.x * a.ϵ + a.x * b.ϵ)\n",
     "a::Dual / b::Dual = Dual(a.x * b.x, b.x * a.ϵ - a.x * b.ϵ)\n",
+    "a::Dual ^ b::Integer = powerForDualNumber(a::Dual, b::Integer)\n",
     "\n",
     "Base.sin(d::Dual) = Dual(sin(d.x), d.ϵ * cos(d.x))\n",
     "Base.cos(d::Dual) = Dual(cos(d.x), - d.ϵ * sin(d.x))"
@@ -933,19 +932,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "lightweight-voluntary",
+   "execution_count": 28,
+   "id": "regional-fiber",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3 + 6ϵ"
+       "powerForDualNumber (generic function with 2 methods)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function powerForDualNumber(a::Dual, b::Integer)\n",
+    "    out::Dual=a\n",
+    "    for i in 1:b\n",
+    "        out=out*a\n",
+    "    end\n",
+    "    return out\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "electric-klein",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8 + 24ϵ"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dual(2,2)^2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "visible-bacteria",
+   "metadata": {},
+   "source": [
+    "Хуйня"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "lightweight-voluntary",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mMethodError: ^(::Dual{Int64}, ::Int64) is ambiguous. Candidates:\u001b[39m\n\u001b[91m  ^(x::Number, p::Integer) in Base at intfuncs.jl:274\u001b[39m\n\u001b[91m  ^(a::Dual, b::Real) in Main at In[24]:6\u001b[39m\n\u001b[91mPossible fix, define\u001b[39m\n\u001b[91m  ^(::Dual, ::Integer)\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mMethodError: ^(::Dual{Int64}, ::Int64) is ambiguous. Candidates:\u001b[39m\n\u001b[91m  ^(x::Number, p::Integer) in Base at intfuncs.jl:274\u001b[39m\n\u001b[91m  ^(a::Dual, b::Real) in Main at In[24]:6\u001b[39m\n\u001b[91mPossible fix, define\u001b[39m\n\u001b[91m  ^(::Dual, ::Integer)\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] macro expansion at ./none:0 [inlined]",
+      " [2] literal_pow(::typeof(^), ::Dual{Int64}, ::Val{2}) at ./none:0",
+      " [3] top-level scope at In[25]:5",
+      " [4] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
     }
    ],
    "source": [
@@ -953,35 +1012,35 @@
     "Base.convert(::Type{Dual{T}}, x::Real) where T = Dual(convert(T, x), zero(T))\n",
     "Base.promote_rule(::Type{Dual{T}}, ::Type{R}) where {T,R} = Dual{promote_type(T,R)}\n",
     "\n",
-    "Dual(1, 2) * 3"
+    "Dual(1, 2)^2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "wanted-narrative",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "130.0 + -24.0ϵ"
+       "30.0 + 9.0ϵ"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f(x) = x / (1 + x*x)\n",
+    "f(x) = 1/x+x^2\n",
     "\n",
     "f(Dual(5., 1.))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "comprehensive-intro",
    "metadata": {},
    "outputs": [
@@ -991,7 +1050,7 @@
        "-24.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,8 +1063,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "recognized-briefing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wengert List\n",
+       "y1 = 1 / x\n",
+       "y2 = x ^ 2\n",
+       "y3 = y1 + y2\n"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y=:(1/x+x^2)\n",
+    "Wengert(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "conservative-coral",
    "metadata": {},
    "outputs": [],
    "source": []
