--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "elegant-death",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "median-welding",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "limited-calculator",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Dual"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "level-attachment",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "dying-december",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "wired-efficiency",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "promote_rule (generic function with 126 methods)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "focused-portable",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "extract_derivative (generic function with 3 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "military-ecology",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "D (generic function with 2 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "progressive-comment",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "sqrt (generic function with 21 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,17 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "drawn-monte",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "cos (generic function with 14 methods)"
+       "tan (generic function with 13 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,14 +331,15 @@
     "function cos(x::Dual)\n",
     "    return Dual(cos(x.x), -sin(x.x)*x.dx)\n",
     "end\n",
-    "# function tan(x::Dual)\n",
-    "#     return Dual(tan(x.x),(1/cos(x.x)^2)*x.dx)\n",
-    "# end"
+    "\n",
+    "function tan(x::Dual)\n",
+    "    return Dual(tan(x.x),(1/cos(x.x)^2)*x.dx)\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "eight-lounge",
    "metadata": {},
    "outputs": [
@@ -348,7 +349,7 @@
        "max (generic function with 13 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "digital-thinking",
    "metadata": {},
    "outputs": [
@@ -371,7 +372,7 @@
        "iterate (generic function with 212 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,17 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "comparable-judge",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dual{Float64}(0.18338781372449925, 1.0)"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "spoken-daily",
    "metadata": {},
    "outputs": [
@@ -421,7 +429,7 @@
        "(::var\"#df#1\"{typeof(f)}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,17 +443,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "incident-manchester",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dual{Int64}(3, 1)"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.03569811122195761"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "british-packing",
    "metadata": {},
    "outputs": [
@@ -466,7 +481,7 @@
        "(::var\"#df#1\"{typeof(f)}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "reported-communist",
    "metadata": {},
    "outputs": [
@@ -491,7 +506,7 @@
        "(::var\"#df#1\"{Int64}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "careful-modification",
    "metadata": {},
    "outputs": [
@@ -520,7 +535,7 @@
        "linear (generic function with 1 method)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,81 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "outdoor-gauge",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: x not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: x not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[35]:1",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
-    "typeof(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "academic-digest",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "szmurlo (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function szmurlo(x,x2,x3)\n",
-    "    return sin(x)^4+cos(sin(x2))*x3\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "thirty-adams",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(::var\"#df#3\"{Int64,typeof(szmurlo)}) (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = D(1, szmurlo)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
-   "id": "similar-gothic",
+   "id": "fabulous-river",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.287698674479646"
+       "tgTest (generic function with 1 method)"
       ]
      },
      "execution_count": 41,
@@ -934,127 +882,106 @@
     }
    ],
    "source": [
-    "d(1,1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "ranking-effects",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6931471805599453"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "log(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "meaning-piano",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dupa (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function dupa(x)\n",
-    "    return 2^x\n",
+    "function tgTest(x)\n",
+    "    return tan(x)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "legislative-administrator",
+   "execution_count": 42,
+   "id": "efficient-advancement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#df#7\"{typeof(dupa)}) (generic function with 1 method)"
+       "(::var\"#df#1\"{typeof(tgTest)}) (generic function with 1 method)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d=D(dupa)"
+    "d=D(tgTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "tropical-clearance",
+   "execution_count": 43,
+   "id": "european-triumph",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Int64}(2, 1)"
+      "Dual{Int64}(5, 1)"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2.772588722239781"
+       "12.427881707458354"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(2)"
+    "d(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "amazing-invasion",
+   "execution_count": 40,
+   "id": "recreational-study",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.5574077246549023"
+       "-2.185039863261519"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tan(-1)"
+    "tan(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "otherwise-things",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9092974268256817"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sin(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "freelance-learning",
+   "id": "convenient-migration",
    "metadata": {},
    "outputs": [],
    "source": []
