--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "requested-variable",
    "metadata": {},
    "outputs": [],
@@ -12,11 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "found-offer",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is the structure that stores the autodiff information.  The name is\n",
+    "# `Infinitesimal` spelled backward.  The elements are `x`, the result of a\n",
+    "# computation; `dfdy` a storage location where the derivative of some overall\n",
+    "# computation (`f(x)`) with respect to the output of this element is stored;\n",
+    "# `parent` storing the \"parent\" locations that have been used to produce the\n",
+    "# result `x`; and `bp!` a function that propogates the derivative `dfdy` to the\n",
+    "# parents via `dfdx = dydx * dfdy` where `dydx` is the derivative of this piece\n",
+    "# of the computation, `dfdy` is the derivative of the overall function with\n",
+    "# respect to the output, and `dfdx` is the same for the next level up.\n",
     "mutable struct Dual{T <: Number} <: Number\n",
     "    x::T\n",
     "    dfdy::T\n",
@@ -27,17 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "documentary-nickel",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "convert (generic function with 189 methods)"
+       "convert (generic function with 186 methods)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "distinct-reconstruction",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "zero (generic function with 24 methods)"
+       "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,17 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "entitled-proportion",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "promote_rule (generic function with 128 methods)"
+       "promote_rule (generic function with 125 methods)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,17 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "acceptable-aquatic",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "push_parents! (generic function with 8 methods)"
+       "push_parents! (generic function with 4 methods)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,17 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "approved-diagram",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "backprop! (generic function with 4 methods)"
+       "backprop! (generic function with 2 methods)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,6 +175,7 @@
     "    backprop!([l])\n",
     "end\n",
     "function backprop!(queue::Array{Dual{T},1}) where T\n",
+    "    print(queue)\n",
     "    while length(queue) > 0\n",
     "        l = popfirst!(queue)\n",
     "        l.bp!(l.dfdy, l.parent)\n",
@@ -176,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "tropical-dietary",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "collect_outputs (generic function with 2 methods)"
+       "collect_outputs (generic function with 1 method)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,22 +226,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "boolean-rocket",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "D (generic function with 2 methods)"
+       "D"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"    D([i], f)\n",
+    "\n",
+    "Returns a function that computes the derivative of `f` (if it is\n",
+    "single-argument) or the gradient of `f` (if it is multi-argument or takes a\n",
+    "structured argument).  If `i` is given returns the `i`th component of the\n",
+    "gradient (though this does not reduce the cost with backprop).\n",
+    "\n",
+    "Currently works only for `f` with scalar outputs.  Also, note that the autodiff\n",
+    "will fail unless the output type is identical to the input type (the code\n",
+    "automatically converts constants and non-differentiated expressions to the\n",
+    "appropriate type---only the input and output type of the function needs to\n",
+    "match).\n",
+    "\n",
+    "So, for example, `D(cos)(3)` will fail (because the output type is `Float64` not\n",
+    "`Int`), while `D(cos)(3.0)` will work fine and return `-sin(3.0)`.\n",
+    "\n",
+    "\"\"\"\n",
     "function D(f)\n",
     "    function dfdx(x::T) where T <: Number\n",
     "        # Pass the function a backward infinitesimal whose backprop function\n",
@@ -285,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "boring-reconstruction",
    "metadata": {},
    "outputs": [
@@ -295,7 +322,7 @@
        "D (generic function with 2 methods)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,17 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "religious-velvet",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "log (generic function with 22 methods)"
+       "log (generic function with 21 methods)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,17 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "test (generic function with 2 methods)"
+       "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,17 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#dfdx#37\"{typeof(test)}) (generic function with 3 methods)"
+       "(::var\"#dfdx#18\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,25 +506,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "available-willow",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dual{Float64}[Dual{Float64}(479.68499999999995, 1.0, Dual{Float64}[Dual{Float64}(436.80999999999995, 0.0, Dual{Float64}[Dual{Float64}(20.9, 0.0, 1, var\"#17#23\"()), Dual{Float64}(20.9, 0.0, 1, var\"#17#23\"())], bpt!), Dual{Float64}(42.875, 0.0, Dual{Float64}[Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"()), Dual{Float64}(12.25, 0.0, Dual{Float64}[Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"()), Dual{Float64}(3.5, 0.0, 2, var\"#17#23\"())], bpt!)], bpt!)], bpp!)]"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2-element Array{Int64,1}:\n",
-       " 40\n",
-       " 27"
+       "2-element Array{Float64,1}:\n",
+       " 41.8\n",
+       " 36.75"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(20,3)"
+    "d(20.9,3.5)"
    ]
   },
   {
